# pytango-TemplateDeviceServer

./: LICENSE  Readme.md  TangoDeviceServer.py  TemplateDeviceServer.py  pyproject.toml
tangods_controller_template/: OxygenSensor.py  __init__.py  evr116.py
tangods_controller_template/embed_data/: resource.txt
